--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,10 @@
   "presets": [
     "@babel/preset-env",
     "@babel/react"
+  ],
+  "plugins": [
+    [
+      "@babel/transform-runtime"
+    ]
   ]
 }
