--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
+    "babel-preset-env": "^1.7.0",
     "body-parser": "^1.19.0",
     "camelcase": "^6.0.0",
     "express": "^4.17.1",
