--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "camelcase": "^6.0.0",
+    "clean-webpack-plugin": "^3.0.0",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^4.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "path": "^0.12.7",
